2000-12-22  Derek Price  <derek.price@openavenue.com>

	* Makefile.in: Regenerated

2000-12-21  Derek Price  <derek.price@openavenue.com>

	* cvs-paper.ps: Backout accidental regeneration.

2000-12-21  Derek Price  <derek.price@openavenue.com>

	* .cvsignore: Added *.pdf versions of the *.ps docs
	* CVSvn.texi.in: Use configure to generate CVSvn.texi
	* Makefile.am: New file needed by Automake
	* Makefile.in: Regenerated
	* cvs-paper.ps: Regenerated
	* texinfo.tex: New file added to placate Automake.  Apparently, its
	inclusion is mandated by the GNU coding standards.

2000-12-14  Derek Price  <derek.price@openavenue.com>
	    Linus Tolke  <linus@epact.se>

	* cvs.texinfo (Merging a branch): changed some references to "BRANCH"
	to "BRANCHNAME" for consistancy.  Add a warning about merging using a
	single tagname reference with an xref to "Merging adds and removals"
	for the long explanation
	(Merging adds and removals): Add the long explanation of why merging
	from a single tagname can be tricky
	(update): Add a warning about merging using a single tagname reference
	with an xref to "Merging adds and removals" for the long explanation
	
2000-11-13  Derek Price  <derek.price@openavenue.com>

	* cvs.texinfo: use '@sc{cvs}' instead of 'CVS' in various locations

2000-11-08  Derek Price  <derek.price@openavenue.com>

	* cvs.texinfo (settitle): stick a 'v' in front of the version number
	to make it harder to confuse with chapter, section, and page numbers.

2000-11-08  Derek Price  <derek.price@openavenue.com>

	* cvs.texinfo (settitle): add the version number to the title string
	so that it is easier to find on HTML pages and the like.

2000-10-20  Jim Kingdon  <http://sourceforge.net/users/kingdon/>

	* cvs.texinfo (Variables): Document CVS_USER.

2000-10-17  Derek Price  <derek.price@openavenue.com>

	* cvs.texinfo (Remote repositories): added a comment about specifying
	a password in the repository name when performaing a checkout.
